# kolokwium_git

zad5/: CMakeLists.txt
zad6/: CMakeLists.txt
